# FleetRL-Warehouse

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  q_learning.csv  q_learning.json  q_learning_vs_sarsa_summary.csv  requirements.txt  sarsa.csv  sarsa.json  tabular_benchmark.csv  tabular_benchmark.summary.json
.github/workflows/: tests.yml
configs/: default.yaml
docker/: Dockerfile.core  Dockerfile.ros2
docs/: ALGORITHMS.md  ARCHITECTURE.md  CV_ENTRY.md  GITHUB_UPLOAD.md  PROJECT_PLAN.md  ROS2_UBUNTU_SETUP.md  TROUBLESHOOTING.md  VALIDATION.md  WINDOWS_ANACONDA_GUIDE.md  sample_benchmark.json
notebooks/: quickstart.ipynb
ros2_ws/src/fleetrl_warehouse_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/fleetrl_warehouse_ros/config/: fleet.yaml
ros2_ws/src/fleetrl_warehouse_ros/fleetrl_warehouse_ros/: fleet_coordinator_node.py  policy_executor_node.py  safety_supervisor_node.py
ros2_ws/src/fleetrl_warehouse_ros/launch/: warehouse_fleet.launch.py
ros2_ws/src/fleetrl_warehouse_ros/models/fleet_bot/: model.config  model.sdf
ros2_ws/src/fleetrl_warehouse_ros/worlds/: warehouse.sdf
scripts/: benchmark_tabular.py  evaluate.py  simulate.py  train_deep.py  train_tabular.py
src/fleetrl_warehouse/: __init__.py  cli.py
src/fleetrl_warehouse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fleetrl_warehouse/algorithms/: __init__.py  deep.py  tabular.py
src/fleetrl_warehouse/envs/: __init__.py  gym_envs.py  warehouse_core.py
src/fleetrl_warehouse/evaluation/: __init__.py  runner.py
tests/: test_environment.py  test_render.py  test_tabular.py
