<?xml version="1.0"?>
<package format="3">
  <name>fleetrl_warehouse_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 and Gazebo deployment layer for FleetRL Warehouse.</description>
  <maintainer email="mazyartaghavi@users.noreply.github.com">Mazyar Taghavi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
